--- a/src/app/views/home/live-form-dialog/live-form-dialog.component.html
+++ b/src/app/views/home/live-form-dialog/live-form-dialog.component.html
@@ -18,7 +18,7 @@
 
         <div fxLayout="row wrap">
             <div fxFlex="40" fxFill fxLayoutAlign="start center">
-                <mat-form-field>
+                <mat-form-field width="100">
                     <mat-label>Data da Live</mat-label>
                     <input matInput [matDatepicker]="picker" formControlName="liveDate" name="liveDate">
                     <mat-hint>MM/DD/YYYY</mat-hint>
@@ -28,7 +28,7 @@
             </div>
             <div fxFlex></div>
             <div fxFlex="40" fxFill fxLayoutAlign="start center">
-                <mat-form-field>
+                <mat-form-field width="100">
                     <mat-label>Horário de Live</mat-label>
                     <input matInput type="time" formControlName="liveTime" name="liveTime" #time>
                 </mat-form-field>
